2002-10-30  Bill Bumgarner  <bbum@codefab.com>
	* Fixed a bug in the NSDraggingDestination method declarations and
	made all of the methods optional (the developer only needs to
	implement a subset of the methods and none of the methods are
	required to be a part of that subset).
	* Fixed 'in' operation on arrays to use containsObject:.  Should
	work with sets.  Will not work with NSDictionary.
	* Fixed enum parser to handle enums that don't start with a
	typedef.  Regenerated appkit and foundation enumerated types files
	to pick up missing enums.
	* Added some tests and cleaned up a bit of the existing tests in
	test_subclass.py

2002-10-30  Ronald Oussoren <oussoren@cistron.nl>
	* Fix memory corruption bug
	* Add Obj-C exception handling around calls to ObjC_FindNative,
	  this avoids an unhandled exception when during:
	  	help('Foundation')
	  I didn't add a testcase for this as the above code takes a
	  _very_ long time to execute.
	* Some minor code cleanup (mostly removal of print statements)
	* Reset '__module__' of classes in the __init__.py of AppKit and 
	  Foundation. help(AppKit) now works (and generates an lot of
	  output)
	* pythonify_c_value("@", ...) now correctly process Class objects.
	* Modules/objc/class-builder.m: Can't just call 
	  objc_msgSendSuper({ self->super_class->isa, self }, ...), that
	  won't work when we are the super-class of self...
	* lib/objc/test/test_subclass.py: Added testcases for above
	* Digits are valid characters in Objective-C classnames,
	  class-builder.m incorrectly assumed they are not.
	* Lib/objc/_convenience.py: It is now possible to add multiple
	  convenience methods when an Objective-C selector is present, use
	  this to provide better wrapping of NSDictionary
	* Lib/AppKit/classnib.py: Moved from Lib/objc/classnib.py, removed
	  custom parser and use NSDictionary instead.
	* Tools/mknibwrapper: Script using AppKit.classnib for generating
	  a module declaring base classes for classes defined in NIB files.